# stock_fundamentals

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml  run_api.py  stock_analysis.ipynb  topics.md
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: stockApi.ts
frontend/src/components/: StockAnalysis.tsx
src/: ai_analysis.py  api.py  data.py  financial_analysis.py  playground.ipynb  reporting.py  stock_analysis.ipynb  stock_analysis_demo.html  stock_analysis_demo.ipynb  stock_comparison_analysis.ipynb  technical_analysis.py  visualization.py
